2007-01-21  Glenn Morris  <rgm@gnu.org>

	* tramp.el (tramp-perl-encode, tramp-perl-decode):
	Update copyrights.

2007-01-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-parsed-tramp-file-name): Protect debug spec
	during compilation.
	(tramp-handle-expand-file-name, tramp-find-method)
	(tramp-find-user, tramp-find-host): Don't check for
	`tramp-completion-mode'.
	(tramp-find-foreign-file-name-handler): Check also for
	`tramp-completion-mode' and `ramp-completion-file-name-regexp'.
	(tramp-completion-mode): Variable removed.  Also all occurencies.
	(tramp-completion-handle-file-name-all-completions): Don't call
	`tramp-run-real-handler'.
	(tramp-make-tramp-file-name): It must return always a well-formed
	Tramp file name.
	(tramp-completion-make-tramp-file-name): New defun.
	(tramp-get-completion-methods, tramp-get-completion-user-host):
	Apply it.

2007-01-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-start-process): BUFFER can be nil.

	* tramp-util.el (top): Add defadvice for `ispell-start-process'.

2007-01-14  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.8 released.

2007-01-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Change declaration of `with-temp-message' if it
	doesn't exist.
	(tramp-buffer-name, tramp-debug-buffer-name)
	(tramp-make-tramp-file-name, tramp-make-copy-program-file-name):
	Check also for empty USER.

	* tramp-smb.el (tramp-smb-actions-with-share):
	(tramp-smb-actions-without-share): New defconst.
	(tramp-smb-open-connection): Removed.  Code merged into
	`tramp-smb-maybe-open-connection'.  Use new defconst.

2007-01-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Declare `with-temp-message' if it doesn't exist.

2007-01-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-actions-copy-out-of-band):
	`tramp-copy-failed-regexp' calls `tramp-action-permission-denied'.
	(tramp-handle-file-local-copy): Set `enable-multibyte-characters'